--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -13,6 +13,7 @@ RUN dnf -y install \
     java-1.8.0-openjdk-devel \
     net-tools \
     nc        \
+    iputils   \
     git       \
     ant       \
     unzip     \
