--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -2,7 +2,7 @@
 # Use latest Fedora image as the base, change to jboss:base once available
 FROM fedora:25
 
-MAINTAINER Bela Ban <belaban@yahoo.com>
+LABEL maintainer Bela Ban <belaban@yahoo.com>
 
 # Update base image
 ## Disabled because yum update /clean fail: https://github.com/coreos/coreos-overlay/issues/474
