--- a/ivy.xml
+++ b/ivy.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.3" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
-    <info organisation="org.jgroups.aws.s3"
-          module="native-s3-ping"
+    <info organisation="org.jgroups.docker"
+          module="jgroups-docker"
           revision="1.0.0-SNAPSHOT"/>
 
     <dependencies>
