Using native-s3-ping version 0.9.0

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <jgroups.version>4.0.0.CR2</jgroups.version>
         <aws.version>1.11.86</aws.version>
+        <native-s3.version>0.9.0.Final</native-s3.version>
         <!-- nexus-staging-maven-plugin -->
         <autoReleaseAfterClose>true</autoReleaseAfterClose>
         <nexus.server.id>jboss-releases-repository</nexus.server.id>
@@ -131,9 +132,9 @@
             <version>${jgroups.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>${aws.version}</version>
+            <groupId>org.jgroups.aws.s3</groupId>
+            <artifactId>native-s3-ping</artifactId>
+            <version>${native-s3.version}</version>
         </dependency>
 
     </dependencies>
