--- a/Dockerfile.ispn_perf_test
+++ b/Dockerfile.ispn_perf_test
@@ -19,15 +19,18 @@ RUN printf "\njgroups ALL=(ALL) NOPASSWD: ALL\n" >> /etc/sudoers
 EXPOSE 7800-7900:7800-7900 9000-9100:9000-9100
 
 ENV HOME /opt/jgroups
-#ENV JAVA_HOME /usr/lib/jvm/java
 ENV PATH $PATH:$HOME/IspnPerfTest/bin
 
 WORKDIR /opt/jgroups
 
+### Not supported by docker as of March 2017:
+#RUN printf "net.core.rmem_max = 20000000\nnet.core.wmem_max = 10000000\n" >> /etc/sysctl.conf
 
 ## Download JGroups src code and build JAR
 RUN git clone https://github.com/belaban/IspnPerfTest.git
 RUN cd IspnPerfTest && ant
+
+ADD conf/log4j2.xml IspnPerfTest/conf/
 
 RUN chown -R jgroups.jgroups $HOME/*
 
@@ -39,6 +42,8 @@ USER jgroups
 RUN chmod u+x $HOME/*
 
 
-CMD clear && /bin/bash
+# ENTRYPOINT ["IspnPerfTest/bin/perf-test.sh", "-nohup"]
+# CMD ["-factory ispn", "-cfg IspnPerfTest/conf/dist-sync.xml"]
 
-
+#CMD $HOME/IspnPerfTest/bin/perf-test.sh -nohup $* &> /tmp/IspnPerfTest.log
+CMD $HOME/IspnPerfTest/bin/perf-test.sh -nohup $*
