Added mvn to alpine

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -4,6 +4,10 @@ FROM openjdk:8-jdk-alpine
 
 LABEL maintainer Bela Ban <belaban@yahoo.com>
 
+ENV MAVEN_VERSION 3.5.2
+ENV MAVEN_HOME /usr/lib/mvn
+ENV PATH $MAVEN_HOME/bin:$PATH
+
 RUN apk update && apk upgrade && apk add --no-cache  \
     apache-ant       \
     bash      \
@@ -17,6 +21,21 @@ RUN apk update && apk upgrade && apk add --no-cache  \
     tcpdump   \
     unzip     \
     which
+
+## This is to fix a libc incompatibility which cause protoc to fail
+## Details: https://github.com/sgerrand/alpine-pkg-glibc
+RUN apk --no-cache add ca-certificates wget \
+  && wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub \
+  && wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk \
+  && apk add glibc-2.27-r0.apk
+
+## Install maven
+
+RUN wget http://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+  tar -zxvf apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+  rm apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+mv apache-maven-$MAVEN_VERSION /usr/lib/mvn
+
 
 
 
