--- a/Dockerfile.rolling_upgrade
+++ b/Dockerfile.rolling_upgrade
@@ -8,7 +8,7 @@ ENV HOME /opt/jgroups
 ENV PATH $PATH:$HOME/RollingUpgrade/bin
 WORKDIR /opt/jgroups
 
-
+COPY settings.xml $HOME/.m2/
 
 #RUN apk update && apk upgrade && apk add --no-cache maven
 
@@ -29,6 +29,8 @@ USER root
 ### Not supported by docker as of March 2017:
 #RUN printf "net.core.rmem_max = 20000000\nnet.core.wmem_max = 10000000\n" >> /etc/sysctl.conf
 
+
+
 ## Download JGroups src code and build JAR
 RUN git clone https://github.com/jgroups-extras/RollingUpgrades \
  && cd RollingUpgrades \
@@ -42,6 +44,7 @@ RUN chown -R jgroups.jgroups $HOME/* \
 USER jgroups
 
 #COPY conf/log4j2.xml IspnPerfTest/conf/
+
 
 
 # ENTRYPOINT ["IspnPerfTest/bin/perf-test.sh", "-nohup"]
