--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -25,14 +25,14 @@ RUN apk update && apk upgrade && apk add --no-cache  \
 
 ## This is to fix a libc incompatibility which cause protoc to fail
 ## Details: https://github.com/sgerrand/alpine-pkg-glibc
-RUN apk --no-cache add ca-certificates wget \
-  && wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub \
-  && wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk \
-  && apk add glibc-2.27-r0.apk
+RUN apk --no-cache add ca-certificates wget
+# RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub
+RUN wget -q https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk
+RUN apk add --allow-untrusted glibc-2.27-r0.apk
 
 ## Install maven
 
-RUN wget http://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+RUN wget -q http://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz && \
   tar -zxvf apache-maven-$MAVEN_VERSION-bin.tar.gz && \
   rm apache-maven-$MAVEN_VERSION-bin.tar.gz && \
 mv apache-maven-$MAVEN_VERSION /usr/lib/mvn
