--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
         <dependency>
             <groupId>org.jgroups.kubernetes</groupId>
             <artifactId>jgroups-kubernetes</artifactId>
-            <version>1.0.10.Final</version>
+            <version>[1.0,)</version>
         </dependency>
 
     </dependencies>
