--- a/yaml/jgrp.yaml
+++ b/yaml/jgrp.yaml
@@ -19,14 +19,16 @@ spec:
         name: jgrp
         command: ["chat.sh"]
         args: ["-props tcp.xml -o"]
+        ports:
+          - containerPort: 7800
         env:
           - name: TCP_PORT
-            value: "12000"
+            value: "7800"
           - name: TCPPING_PORT_RANGE
             value: "0"
 #          - name: JGROUPS_EXTERNAL_ADDR
-#            value: "a3d59e22a1b4511eaaac802384b7d669-711219896.us-east-1.elb.amazonaws.com"
+#            value: "afbea1a011c0911eaaac802384b7d669-1529495313.us-east-1.elb.amazonaws.com"
           - name: TCPPING_INITIAL_HOSTS
-            value: "a3d59e22a1b4511eaaac802384b7d669-711219896.us-east-1.elb.amazonaws.com[12000]"
+            value: "afbea1a011c0911eaaac802384b7d669-1529495313.us-east-1.elb.amazonaws.com[7800]"
 
 
