--- a/yaml/gossiprouter.yaml
+++ b/yaml/gossiprouter.yaml
@@ -34,12 +34,20 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gossiprouter
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
-  type: NodePort
+  type: LoadBalancer
+  externalTrafficPolicy: Local
   ports:
     - port: 8787
       targetPort: 8787
       name: debug
+      protocol: TCP
+    - port: 9000
+      targetPort: 9000
+      name: netcat
       protocol: TCP
     - port: 12001
       targetPort: 12001
@@ -47,5 +55,13 @@ spec:
       protocol: TCP
   selector:
     run: gossiprouter
-
-
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-all
+spec:
+  podSelector: {}
+  policyTypes:
+  - Ingress
+  - Egress
