--- a/yaml/lb.yaml
+++ b/yaml/lb.yaml
@@ -3,20 +3,18 @@ kind: Service
 metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
   name: lb
 spec:
   type: LoadBalancer
+  externalTrafficPolicy: Local
   ports:
-    - port: 7800
-      name: jgroups
-      protocol: TCP
-    - port: 7900
-      name: jgroups2
-      protocol: TCP
     - port: 12000
       name: echo-server
       protocol: TCP
+    - port: 7800
+      name: jgroups
+      protocol: TCP
   selector:
     run: jgrp
-#  externalTrafficPolicy: Local
