--- a/yaml/sfc.yaml
+++ b/yaml/sfc.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nyc
+  name: sfc
   labels:
-    site: nyc
+    site: sfc
 spec:
   replicas: 1
   selector:
     matchLabels:
-      site: nyc
+      site: sfc
   template:
     metadata:
       labels:
-        site: nyc
+        site: sfc
     spec:
       containers:
       - image: belaban/jgroups
-        name: nyc
+        name: sfc
         command: ["chat.sh"]
-        args: ["-props nyc.xml -o"]
+        args: ["-props sfc.xml -o"]
         ports:
           - containerPort: 7800
         env:
@@ -27,16 +27,16 @@ spec:
 #          - name: JGROUPS_EXTERNAL_ADDR
 #            value: "afbea1a011c0911eaaac802384b7d669-1529495313.us-east-1.elb.amazonaws.com"
           - name: DNS_QUERY
-            value: nyc
+            value: sfc
           - name: TCPGOSSIP_INITIAL_HOSTS
             value: "a618ec546257011eab7290e939514b67-695e802f565187e4.elb.us-east-1.amazonaws.com[12001],a9692b520257211eaa10b0e07ddc8c1f-aa89107390748962.elb.us-west-2.amazonaws.com[12001]"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nyc
+  name: sfc
   labels:
-    site: nyc
+    site: sfc
 spec:
   clusterIP: None
   ports:
@@ -49,7 +49,7 @@ spec:
       protocol: TCP
       targetPort: 8787
   selector:
-     site: nyc
+     site: sfc
   sessionAffinity: None
 #  type: ClusterIP
   type: ClusterIP
