--- a/yaml/sfc.yaml
+++ b/yaml/sfc.yaml
@@ -28,7 +28,7 @@ spec:
 #            value: "afbea1a011c0911eaaac802384b7d669-1529495313.us-east-1.elb.amazonaws.com"
           - name: DNS_QUERY
             value: sfc
-          - name: TCPGOSSIP_INITIAL_HOSTS
+          - name: TUNNEL_INITIAL_HOSTS
             value: "a618ec546257011eab7290e939514b67-695e802f565187e4.elb.us-east-1.amazonaws.com[12001],a9692b520257211eaa10b0e07ddc8c1f-aa89107390748962.elb.us-west-2.amazonaws.com[12001]"
 ---
 apiVersion: v1
