--- a/yaml/nyc.yaml
+++ b/yaml/nyc.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - image: belaban/jgroups
         name: nyc
-        command: ["chat.sh"]
+        command: ["relay.sh"]
         args: ["-props nyc.xml -o"]
         ports:
           - containerPort: 7800
