--- a/yaml/gossiprouter.yaml
+++ b/yaml/gossiprouter.yaml
@@ -37,7 +37,7 @@ metadata:
   name: gossiprouter
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
@@ -56,13 +56,3 @@ spec:
       protocol: TCP
   selector:
     run: gossiprouter
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: allow-all
-spec:
-  podSelector: {}
-  policyTypes:
-  - Ingress
-  - Egress
